--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,4 +1,7 @@
+#webpacker.yml
+
 # Note: You must restart bin/webpack-dev-server for changes to take effect
+
 
 default: &default
   source_path: app/javascript
